@@ -6,6 +6,8 @@
 - Added support for a JSON configuration file.
 - Added PHP 8.0 support.
 - Allow plugins to register their own settings.
+- Change: When analysing a logmodel or an exception, kreXX now
+  analyses the special log/error stuff before the getter.
 - Bugfix: Endless scrolling when clicking too fast through
   the search.
 - Bugfix: Exception when using one php statement and a krexx
